
syntax = "proto3";

// Package where we want the generated files
option go_package = "./agentero";


package agentero;


// After any edit in this file we have to run the following command
// This creates or refreshes agentero.pb.go and agentero.grpc.pb.go
/*
protoc --go_out=. --go_opt=paths=source_relative \
--go-grpc_out=. --go-grpc_opt=paths=source_relative \
agentero/agentero.proto
*/



// Service definition, new method definitions go here
service Comms {

	rpc CredentialSystem (LogRequest) returns (LogReply) {}
	
	rpc GetContactAndPoliciesById (UserID) returns (ContactAndPolicies) {}

	rpc GetContactsAndPoliciesByMobileNumber (MobileNumber) returns (ContactAndPolicies) {}
}


// Call from client side
message LogRequest {
	string name = 1;
	string pass = 2;
}


// Answer from server side for LogRequest
message LogReply {
	bool success = 1;
}

message UserID {
	string ID = 1;
}

message ContactAndPolicies {
	bool success = 1;
	bytes content = 2;
}

message MobileNumber {
	string number = 1;
}


/*
// Possible future upgrade: switch to directly using objects already created instead of 'bytes' for JSON transfer

message ContactAndPolicies {
	bool success = 1;
	PolicyHolder user = 2;
	repeated InsurancePolicy policies = 3;
}

message PolicyHolder {
	string ID = 1;
	string Name = 2;
	string MobileNumber = 3;
}

message InsurancePolicy {
	string ID = 1;
	string MobileNumber = 2;
	int32 Premium = 3;
	string Type = 4;
}
*/